<resources>
    <string name="app_name">TaskTracker</string>
    <string name="login_welcome">Welcome to TaskTracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_a_task">Add a Task</string>
    <string name="settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="user">user</string>
    <string name="list_users">List Users</string>
    <string name="add_user">Add User</string>
    <string name="return_to_task">Return To Task</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="welcome_to_tasktracker">Welcome to TaskTracker!</string>
    <string name="admin">Admin</string>
    <string name="add_update_user">Add/Update User</string>
    <string name="return_to_settings">Return To Settings</string>
</resources>